# meteroid-clients

./: .gitignore  CHANGELOG.md  LICENSE  README.md  regen_openapi.py
.claude/: settings.local.json
codegen/: Cargo.toml  Dockerfile  (+3 more)
rust/: Cargo.toml  README.md  deny.toml
rust/src/: connector.rs  error.rs  lib.rs  request.rs  webhooks.rs
rust/src/api/: add_ons.rs  batch_jobs.rs  checkout_sessions.rs  client.rs  connect.rs  coupons.rs  credit_notes.rs  customers.rs  events.rs  features.rs  invoices.rs  metrics.rs  mod.rs  o_auth.rs  o_auth_apps.rs  plan.rs  plans.rs  product_families.rs  product_family.rs  products.rs  subscription.rs  subscriptions.rs  usage.rs
rust/src/models/: add_on.rs  add_on_event.rs  add_on_event_data.rs  add_on_id.rs  add_on_list_response.rs  address.rs  all_components_scope.rs  applied_coupon.rs  applied_coupon_detailed.rs  applied_coupon_id.rs  available_parameters.rs  bank_account_id.rs  bank_transfer_payment_method_config.rs  batch_job_chunk_id.rs  batch_job_detail_response.rs  batch_job_failures_response.rs  batch_job_id.rs  batch_job_item_failure_response.rs  batch_job_list_response.rs  batch_job_response.rs  batch_job_status.rs  batch_job_type.rs  billable_metric_id.rs  billing_config.rs  billing_cycle_reset_period.rs  billing_metric_aggregate_enum.rs  billing_period_enum.rs  billing_type.rs  billing_type_enum.rs  boolean_effective_entitlement_value.rs  boolean_entitlement_value.rs  boolean_feature_type.rs  boolean_resolved_entitlement_value.rs  calendar_reset_period.rs  calendar_unit.rs  cancel_checkout_session_response.rs  cancel_subscription_request.rs  cancel_subscription_response.rs  capacity_fee.rs  capacity_fee_structure.rs  (+261 more)
rust/tests/it/: main.rs  model_serialization.rs  wiremock_tests.rs
(+361 files in other folders)
